<resources>
    <string name="app_name">Kotlin Expert</string>
    <string name="actionbar_home_title">League List</string>
    <string name="actionbar_detail_title">League Detail</string>
    <string name="actionbar_event_detail_title">Match Detail</string>
    <string name="actionbar_event_list_title">Match List</string>
    <string name="show_league_events">Show League Events</string>
    <string name="tab_event_last_match">Last Match</string>
    <string name="tab_event_next_match">Next Match</string>
    <string name="ft">FT</string>
    <string name="error">Something Went Wrong</string>
    <string name="scorers">Scorers</string>
    <string name="cards">Cards</string>
    <string name="red_cards">Red Cards</string>
    <string name="yellow_card">Yellow Card</string>
    <string name="lineup">Lineup</string>
    <string name="substitutes">Substitutes</string>
    <string name="search">Search</string>
    <string name="no_result_found">No Result Found</string>
    <string name="home_team_logo">home team logo</string>
    <string name="away_team_logo">away team logo</string>
    <string name="add_to_favorite">Match added to favourite</string>
    <string name="favourite_menu">Favourite List</string>
    <string name="actionbar_favourite_title">Favourite</string>
    <string-array name="league_name_data">
        <item>English Premier League</item>
        <item>French Ligue 1</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>Spanish La Liga</item>
        <item>American Mayor League</item>
        <item>Protugeuese Premiera Liga</item>
        <item>Australian A League</item>
        <item>Scotish Premier League</item>
        <item>English League 1</item>
    </string-array>
    <string-array name="league_id_data">
        <item>4328</item>
        <item>4334</item>
        <item>4331</item>
        <item>4332</item>
        <item>4335</item>
        <item>4346</item>
        <item>4344</item>
        <item>4356</item>
        <item>4330</item>
        <item>4396</item>
    </string-array>
</resources>