<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.EventDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <ProgressBar
            android:id="@+id/pb_event_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_item_event_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/tv_item_event_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_item_event_name"
            tools:text="@tools:sample/full_names" />

        <ImageView
            android:id="@+id/home_badge"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_item_home_team"
            app:layout_constraintBottom_toBottomOf="@id/tv_item_home_team"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/home_team_logo"/>

        <TextView
            android:id="@+id/tv_item_home_team"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@id/tv_item_score"
            app:layout_constraintEnd_toStartOf="@id/tv_item_score"
            app:layout_constraintStart_toEndOf="@id/home_badge"
            app:layout_constraintTop_toTopOf="@id/tv_item_score"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/tv_item_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="28sp"
            app:layout_constraintEnd_toStartOf="@id/tv_item_away_team"
            app:layout_constraintStart_toEndOf="@id/tv_item_home_team"
            app:layout_constraintTop_toBottomOf="@id/tv_item_event_date"
            tools:text="@tools:sample/first_names" />

        <TextView
            android:id="@+id/tv_item_away_team"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@id/tv_item_score"
            app:layout_constraintEnd_toStartOf="@id/away_badge"
            app:layout_constraintStart_toEndOf="@id/tv_item_score"
            app:layout_constraintTop_toBottomOf="@id/tv_item_event_date"
            tools:text="@tools:sample/first_names" />

        <ImageView
            android:id="@+id/away_badge"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_item_away_team"
            app:layout_constraintBottom_toBottomOf="@id/tv_item_away_team"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/away_team_logo"/>

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ft"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_item_score" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_event_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/tv_title_scorer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/scorers"
            app:layout_constraintEnd_toEndOf="@id/guideline_event_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_favourite" />

        <ImageView
            android:id="@+id/btn_favourite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_favorite_red_48dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/container_home_scorer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="@id/tv_title_scorer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_scorer">

            <TextView
                android:id="@+id/tv_home_scorers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                tools:text="@tools:sample/lorem" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/container_away_scorer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline_event_detail"
            app:layout_constraintTop_toBottomOf="@id/tv_title_scorer">

            <TextView
                android:id="@+id/tv_away_scorers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                tools:text="@tools:sample/lorem" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_title_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/cards"
            app:layout_constraintEnd_toEndOf="@id/tv_title_scorer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_home_scorer" />

        <androidx.cardview.widget.CardView
            android:id="@+id/container_home_cards"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="@id/tv_title_scorer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_card">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/red_cards" />

                <TextView
                    android:id="@+id/tv_home_red_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    tools:text="Red Cards" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/yellow_card" />

                <TextView
                    android:id="@+id/tv_home_yellow_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    tools:text="Red Cards" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/container_away_cards"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="@+id/container_away_scorer"
            app:layout_constraintStart_toStartOf="@id/container_away_scorer"
            app:layout_constraintTop_toBottomOf="@id/tv_title_card">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/red_cards" />

                <TextView
                    android:id="@+id/tv_away_red_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    tools:text="Red Cards" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/yellow_card" />

                <TextView
                    android:id="@+id/tv_away_yellow_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    tools:text="Red Cards" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_title_lineup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/lineup"
            app:layout_constraintEnd_toEndOf="@id/tv_title_scorer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_home_cards" />

        <androidx.cardview.widget.CardView
            android:id="@+id/container_home_lineup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="@id/tv_title_scorer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_lineup">

            <TextView
                android:id="@+id/tv_home_lineup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                tools:text="Red Cards" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/container_away_lineup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="@id/container_away_scorer"
            app:layout_constraintStart_toStartOf="@id/container_away_scorer"
            app:layout_constraintTop_toBottomOf="@id/tv_title_lineup">

            <TextView
                android:id="@+id/tv_away_lineup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                tools:text="Red Cards" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_title_substitutes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/substitutes"
            app:layout_constraintEnd_toEndOf="@id/tv_title_scorer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_home_lineup" />

        <androidx.cardview.widget.CardView
            android:id="@+id/container_home_substitutes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="@id/tv_title_scorer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_substitutes">

            <TextView
                android:id="@+id/tv_home_substitutes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                tools:text="Red Cards" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/container_away_substitutes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="@id/container_away_scorer"
            app:layout_constraintStart_toStartOf="@id/container_away_scorer"
            app:layout_constraintTop_toBottomOf="@id/tv_title_substitutes">

            <TextView
                android:id="@+id/tv_away_substitutes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                tools:text="Red Cards" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>